[package]
name = "raknet"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tokio = { version = "1.39", features = ["sync", "time"] }
tokio-util = "0.7"
async-recursion = "1.1"
anyhow = "1.0"
dashmap = "6.0"
parking_lot = "0.12"
lazy_static = "1.5"
prometheus-client = "0.22"
byteorder = "1.5"
